--- a/.omnibus/config.yml
+++ b/.omnibus/config.yml
@@ -1,10 +1,5 @@
 build:
-  - x86_64
-    - ubuntu
-      - 14.04
-      - 16.04
+  - ubuntu-14.04-x86_64
 test:
-  - x86_64
-   - ubuntu
-     - 14.04
-     - 16.04
+  - ubuntu-14.04-x86_64
+  - ubuntu-16.04-x86_64
