--- a/.omnibus/Jenkinsfile
+++ b/.omnibus/Jenkinsfile
@@ -19,3 +19,16 @@ pipeline {
         }
     }
 }
+
+pipeline {
+    agent any
+
+    stages {
+        stage('Clone') {
+            steps {
+                git url: 'https://github.com/scotthain/omnibus-harmony.git', branch: 'whatisthis'
+                readYaml: '.omnibus/config.yml'
+            }
+        }
+    }
+}
